--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <center>
        
             <div style="margin-top: 75px;">
-               <img src="landing.png" alt="landing page" width="850">
+               <img src="sources/landing.png" alt="landing page" width="850">
             <div>
 
 
