--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div style="display: flex; justify-content: space-between; padding-right:100px; padding-left: 100px; padding-top:7px; box-shadow: 2px 1px 2px #eee; width:auto;">
 
             <div>
-                <img  style="margin-top: 16px;" src="sources/landing.png" width="140"; width="auto"; alt="logo of zerodha;">
+                <img  style="margin-top: 16px;" src="sources/logo.svg" width="140"; width="auto"; alt="logo of zerodha;">
             </div>
 
             <div style="display: flex; justify-content: space-betwee;">
