--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             </div>
 
             <div style="display: flex; justify-content: space-betwee;">
-                <div style="padding: 20px;">Sign up</div>
-                <div style="padding: 20px;">About</div>
-                <div style="padding: 20px;">Pricing</div>
-                <div style="padding: 20px;">Products</div>
-                <div style="padding: 20px;">Support</div>
-                <div style="padding: 20px;"class="material-symbols-outlined">menu</div>
+                <div style="padding: 20px; cursor: pointer;">Sign up</div>
+                <div style="padding: 20px; cursor: pointer;">About</div>
+                <div style="padding: 20px; cursor: pointer;">Pricing</div>
+                <div style="padding: 20px; cursor: pointer;">Products</div>
+                <div style="padding: 20px; cursor: pointer;">Support</div>
+                <div style="padding: 20px; cursor: pointer;"class="material-symbols-outlined">menu</div>
             </div>
 
     </div>
@@ -55,7 +55,7 @@
             <p style="font-size: 20px;">Online platform to invest in stocks, derivatives, mutual funds, and more </p>
         </div>
         <br>
-        <button style="background-color: rgb(39, 140, 228); color: white; border-radius: 4px; font-size: larger; padding-left :25px;padding-right: 25px; padding-top: 12px; padding-bottom: 12px;"> Sign
+       <button style="background-color: rgb(39, 140, 228); color: white; border-radius: 4px; font-size: larger; padding-left :25px;padding-right: 25px; padding-top: 12px; padding-bottom: 12px; border-color:white; cursor: pointer;" > Sign
             up now</button>
     </center>
 
